# kemuler

./: Cargo.toml  README.md  build_doc.sh
.helix/: languages.toml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/hash/: trait.Hash.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/implementors/kemuler/simulatable/: trait.Simulatable.js
docs/kemuler/: all.html  index.html  macro.button_like_impl_body!.html  macro.button_like_impl_body.html  sidebar-items.js
docs/kemuler/combinator/: index.html  sidebar-items.js  struct.During.html  struct.IterSequence.html  struct.Repeat.html  struct.Sequence.html  struct.Sleep.html  struct.SpinSleep.html  trait.Combine.html
docs/kemuler/combinator/spin_sleep/: struct.SpinSleep.html
docs/kemuler/common_inputs/: enum.Key.html  enum.MouseButton.html  index.html  sidebar-items.js  struct.Char.html  struct.MousePosition.html  struct.MouseScroll.html  struct.StrSequence.html
docs/kemuler/input_event/: index.html  sidebar-items.js  struct.ChangeBy.html  struct.Execute.html  struct.SetTo.html  trait.Invert.html
docs/kemuler/prelude/: index.html
docs/kemuler/simulatable/: index.html  sidebar-items.js  trait.Simulatable.html
docs/kemuler/simulator/: index.html  sidebar-items.js  trait.Simulate.html
docs/src/kemuler/: combinator.rs.html  common_inputs.rs.html  input_event.rs.html  lib.rs.html  simulatable.rs.html  simulator.rs.html
docs/src/kemuler/combinator/: spin_sleep.rs.html
examples/auto-clicker/: main.rs
examples/mouse-circle/: main.rs
src/: combinator.rs  common_inputs.rs  control_flow.rs  emulatable.rs  event.rs  execute.rs  input.rs  input_event.rs  inputs.rs  lib.rs  peripherals.rs  simulatable.rs  simulate.rs  simulator.rs  simulators.rs  string_event_logger.rs  timing.rs
src/combinator/: simulatable_pack.rs  spin_sleep.rs  test.rs
src/inputs/: common.rs
src/simulators/: enigo.rs  event_log.rs  string_event_logger.rs
src/utils/: time.rs
