[package]
name = "kemuler"
version = "0.1.0"
authors = [ "Multirious" ]
edition = "2021"

description = "Experimental high level input simulation tool using combinators"
documentation = "https://kemuler.github.io/kemuler/kemuler"
homepage = "https://github.com/Multirious/kemuler"
repository = "https://github.com/Multirious/kemuler"
readme = "README.md"
keywords = ["input", "testing", "automation", "framework", "kemuler"]
categories = ["development-tools::testing", "api-bindings", "hardware-support"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin_sleep = { version = "1.1.1", optional = true }

[build-dependencies]
rustc_version = "0.4.0"

[features]
# more accurate thread sleep
spin_sleep = ["dep:spin_sleep"]

# this feature is currently a work around for https://github.com/rust-lang/rust/issues/67295
# uh do not use btw if you're not testing this crate's doctest.
# (it is not counted as a breaking change when removed)
test = []

[package.metadata.docs.rs]
features = ["spin_sleep"]
